// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is helsinkiAccountAMR > should render helsinki account information as expected based on config 1`] = `
<AuthenticationProviderInformation>
  <ProfileSection>
    <section
      className="_content-box_56bee9 _profile-section_4e7a14"
    >
      <div
        className="_flex-box-columns_31c5b6"
      >
        <div
          className="_editor-description-container_31c5b6"
        >
          <h2>
            profileInformation.authenticationMethod
          </h2>
          <span>
            identityProvider.helsinkiAccount
          </span>
        </div>
      </div>
    </section>
  </ProfileSection>
</AuthenticationProviderInformation>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is tunnistusSuomifiAMR > should render suomi.fi information as expected based on config 1`] = `
<AuthenticationProviderInformation>
  <ProfileSection>
    <section
      className="_content-box_56bee9 _profile-section_4e7a14"
    >
      <div
        className="_flex-box-columns_31c5b6"
      >
        <div
          className="_editor-description-container_31c5b6"
        >
          <h2>
            profileInformation.authenticationMethod
          </h2>
          <span>
            identityProvider.tunnistusSuomifi
          </span>
        </div>
      </div>
    </section>
  </ProfileSection>
</AuthenticationProviderInformation>
`;
